@@ -27,6 +27,9 @@
 # 	                    Narrow the voltage bracket by this.
 #
 # $Log$
+# Revision 1.7  2004/08/18 17:27:21  jimmyo
+# Made linux/sensors_volt work with negative voltages (Deb#256734).
+#
 # Revision 1.6  2004/08/18 17:20:58  jimmyo
 # linux/sensors_temp now understand temp lines without hyst or max settings (Deb#256380).
 #
@@ -72,7 +75,7 @@ my %config = (
 			 graph_args => '--base 1000 -l 0'
 	               },
 	       volt => {
-			 regex => qr/^([^:]*)\s*:\s+\+?(\d+(?:\.\d+)?) V.*?(\d+(?:\.\d+)?) V.*?(\d+(?:\.\d+)?) V/m,
+			 regex => qr/^([^:]*)\s*:\s+\+?(-?\d+(?:\.\d+)?) V/m,
 			 title => 'Voltages',
 			 vtitle => 'Volt',
 			 print_threshold => \&volt_threshold,
