@@ -18,6 +18,7 @@ munin (1.1.3)
     sensors output (SF#972749, SF#972748, Deb#255312).
   * linux/sensors_temp now understand temp lines without hyst or max settings
     (Deb#256380).
+  * Made linux/sensors_volt work with negative voltages (Deb#256734).
 
 munin (1.1.2)
 
